[package]
name = "discord"
version = "0.1.0"
edition = "2021"

[lib]
name = "discord"
crate-type = ["cdylib"]

[dependencies]
discord-sdk = "0.3.5"
sha2 = "0.10.8"
widestring = "1.0.2"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
pelite = "0.10.0"

[dependencies.windows]
version = "0.52.0"
features = [
  "Win32_System_SystemServices",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_LibraryLoader",
  "Win32_System_Diagnostics_Debug"
  ]

[features]
default = ["renegadex"]
renegadex = []
firestorm = []

[profile.release]
opt-level = 'z'
strip = true
lto = true
codegen-units = 1